--- a/Project1/index.html
+++ b/Project1/index.html
@@ -6,26 +6,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Expanding Cards</title>
+    <title>Nostalgia Cards</title>
   </head>
   <body>
     <div class="container">
-      <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
-        <h3>Explore The World</h3>
+      <div class="panel active" style="background-image: url('nostalgia/purva1.jpeg')">
+        <h3>Purva</h3>
       </div>
-      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1572276596237-5db2c3e16c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
-        <h3>Wild Forest</h3>
+      <div class="panel" style="background-image: url('nostalgia/aditya1.jpeg')">
+        <h3>Aditya</h3>
       </div>
-      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80')">
-        <h3>Sunny Beach</h3>
+      <div class="panel" style="background-image: url('nostalgia/jayraj1.jpeg')">
+        <h3>Jayraj</h3>
       </div>
-      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80')">
-        <h3>City on Winter</h3>
+      <div class="panel" style="background-image: url('nostalgia/kashyap1.jpeg')">
+        <h3>Kashyap</h3>
       </div>
-      <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
-        <h3>Mountains - Clouds</h3>
+      <div class="panel" style="background-image: url('nostalgia/suyash1.jpeg')">
+        <h3>Suyash</h3>
       </div>
-
+      <div class="panel" style="background-image: url('nostalgia/mitali1.jpeg')">
+        <h3>Mitali</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/vitthal1.jpeg')">
+        <h3>Vitthal</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/sahil1.jpeg')">
+        <h3>Sahil</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/yash1.jpeg')">
+        <h3>Yash</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/santoshi1.jpeg')">
+        <h3>Santoshi</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/raj1.jpeg')">
+        <h3>Raj</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/naman1.jpeg')">
+        <h3>Naman</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/darshan1.jpeg')">
+        <h3>Darshan</h3>
+      </div>
+      <div class="panel" style="background-image: url('nostalgia/sameer1.jpeg')">
+        <h3>Sameer</h3>
+      </div>
+      
     </div>
 
     <script src="script.js"></script>
